# world-athletics-database

./: .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  CNAME  LICENSE  Makefile  README.md  README.rst  _quarto.yml  about_me.html  analytics.html  analytics.qmd  index.html  index.qmd  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  world-athletics-database.qmd
.github/workflows/: docs.yml
_output/: world-athletics-database.html
contents/: about_me.html  about_me.qmd  analytics.html  analytics.qmd  stats.html  stats.ipynb
data/: data.parquet  men.parquet  options.json  women.parquet  worldrecords.csv
data/men/: 10-kilometres-race-walk.csv  10-kilometres.csv  10-miles-road.csv  100-metres.csv  1000-metres.csv  10000-metres-race-walk.csv  10000-metres.csv  110-metres-hurdles.csv  15-kilometres.csv  1500-metres.csv  20-kilometres-race-walk.csv  20-kilometres.csv  200-metres.csv  2000-metres-steeplechase.csv  2000-metres.csv  20000-metres-race-walk.csv  30-kilometres-race-walk.csv  300-metres.csv  3000-metres-race-walk.csv  3000-metres-steeplechase.csv  3000-metres.csv  35-kilometres-race-walk.csv  400-metres-hurdles.csv  400-metres.csv  4x100-metres-relay.csv  4x1500-metres-relay.csv  4x200-metres-relay.csv  4x400-metres-relay.csv  4x800-metres-relay.csv  5-kilometres.csv  (+18 more)
docs/: analytics.html  index.html  search.json  world-athletics-database.html
notebooks/: main.ipynb  main2.ipynb  options.json
tests/: __init__.py  test_world_athletics_database.py
world_athletics_database/: __init__.py  parse.py  postprocess.py
(+49 files in other folders)
